# test_task_wp

./: Dockerfile  csv_to_sql_parser.py  pyproject.toml
app/: config.py  csv_to_sql_parser.py  main.py  models.py
app/db/: crud.py  models.py  populate_db.py
scripts/: prestart.sh
