[project]
name = "wp-test-task"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.1.0",
    "flask-bcrypt>=1.0.1",
    "flask-jwt-extended>=4.7.1",
    "flask-sqlalchemy>=3.1.1",
    "pandas>=2.2.3",
    "psycopg>=3.2.4",
    "pydantic>=2.10.5",
    "pydantic-settings>=2.7.1",
    "sqlalchemy>=2.0.37",
]
